apps/papra/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: papra
  labels:
    name: papra
